# LumEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  copy_fmod.bat  index.html  init.bat  init.py  init_fmod.bat  main.cpp  rebuild.py  styl.css
LumEngine/: main.cpp
LumEngine/Editor/Include/: Editor.hpp
LumEngine/Editor/Include/Core/: EditorCommon.hpp  EditorPch.hpp  EntityCreator.hpp  EntityEditor.hpp
LumEngine/Editor/Src/: Editor.cpp  Main.cpp
LumEngine/Editor/Src/Core/: EditorConsole.cpp  EntityCreator.cpp  EntityEditor.cpp  FileExplorer.cpp
LumEngine/Engine/Include/: AudioModule.hpp  Engine.hpp  RenderModule.hpp  SceneModule.hpp
LumEngine/Engine/Include/Core/: CoreCommon.hpp  CoreDefines.hpp  CorePch.hpp  Setup.hpp
LumEngine/Engine/Src/: AudioModule.cpp  RenderModule.cpp
LumEngine/Engine/Src/Core/: CorePch.cpp  TransformSystem.cpp
LumEngine/InternalAssets/Shaders/: irradiance.frag  irradiance.vert  light_pass.frag  prefiltered_env.vert
LumEngine/InternalAssets/Shaders/shadow_mapping/: directional.vert
LumEngine/assets/shader/: basic.frag  basic.vert
LumEngine/editor/: editor.hpp  editor_camera.hpp
LumEngine/editor/include/: EditorDepManager.hpp  editor.hpp  editor_camera.hpp  editor_dep_manager.hpp
LumEngine/editor/include/core/: EditorCamera.hpp  EditorCommon.hpp  EditorConsole.hpp  EditorSelection.hpp  EntityInspector.hpp  FileExplorer.hpp  SceneInspector.hpp  component_creator.hpp  editor_camera.hpp  editor_common.hpp  editor_console.hpp  editor_pch.hpp  editor_selection.hpp  editor_titlebar.hpp  entity_creator.hpp  entity_editor.hpp  entity_inspector.hpp  file_explorer.hpp  scene_inspector.hpp  viewport.hpp
LumEngine/editor/src/: editor.cpp  main.cpp
LumEngine/editor/src/core/: EditorCommon.cpp  EntityCreator.cpp  EntityEditor.cpp  EntityInspector.cpp  SceneInspector.cpp  component_creator.cpp  editor_common.cpp  editor_console.cpp  editor_titlebar.cpp  entity_creator.cpp  entity_editor.cpp  entity_inspector.cpp  file_explorer.cpp  scene_inspector.cpp  viewport.cpp
LumEngine/engine/: Engine.cpp  Engine.hpp  main.cpp
LumEngine/engine/audiomodule/: audio_define.hpp  audio_manager.hpp  audio_system.hpp  lum_audio.hpp
LumEngine/engine/audiomodule/components/: c_audio_emitter.hpp  c_audio_listener.hpp
LumEngine/engine/audiomodule/details/: audio_define.hpp  audio_emitter.hpp  audio_emitter_wrapper.hpp  audio_listener_wrapper.hpp  audio_manager.cpp  audio_manager.hpp
LumEngine/engine/audiomodule/systems/: sys_audio.hpp
LumEngine/engine/core/: core_common.hpp  core_defines.hpp  logger.hpp
LumEngine/engine/core/details/: e_define.hpp
LumEngine/engine/core/math/: vec3f.hpp  vec3i.hpp  vec3u.hpp
LumEngine/engine/core/utils/: handle_pool.hpp  path_service.hpp  sparse_set.hpp  string_hasher.hpp
LumEngine/engine/entitymodule/: ecs_manager.hpp  entity.hpp  lum_ecs.hpp
LumEngine/engine/entitymodule/components/: c_audio_emitter.hpp  lum_components.hpp
LumEngine/engine/entitymodule/details/: ecs_define.hpp  ecs_manager.hpp
LumEngine/engine/entitymodule/ecs/: ecs_component_pool.hpp  ecs_define.hpp  ecs_manager.hpp
LumEngine/engine/entitymodule/systems/: lum_systems.hpp  sys_define.hpp
LumEngine/engine/entitymodule/utils/: ecs_define.hpp
LumEngine/engine/eventmodule/: ev_bus.cpp  ev_bus.hpp  ev_define.hpp  ev_engine.hpp  ev_game.hpp  lum_events.hpp
LumEngine/engine/eventmodule/details/: ev_bus.hpp  ev_define.hpp  ev_emitter.hpp  ev_pool.hpp
LumEngine/engine/include/: PlatformModule.hpp  RenderModule.hpp  ResModule.hpp  audio_module.hpp  engine.hpp  platform_module.hpp  render_module.hpp  res_module.hpp  scene_module.hpp
LumEngine/engine/include/core/: CoreCommon.hpp  TransformSystem.hpp  asset_service.hpp  content_manager.hpp  core_common.hpp  core_defines.hpp  core_pch.hpp  engine.hpp  fixed_memory.hpp  fixed_string.hpp  flags.hpp  limits.hpp  logger.hpp  lum_assert.hpp  scene_manager.hpp  setup.hpp  shaders_define.h  transform_system.hpp  types.hpp
LumEngine/engine/include/lum_packages/: lum_audio.hpp  lum_ecs.hpp  lum_events.hpp  lum_render.hpp
LumEngine/engine/include/testfield/: camera.hpp  light.hpp  material.hpp  material_manager.hpp  model_manager.hpp  object.hpp  render_resources.hpp  renderer.hpp  shader_manager.hpp  (+1 more)
LumEngine/engine/src/: PlatformModule.cpp  ResModule.cpp  SceneModule.cpp  audio_module.cpp  engine.cpp  platform_module.cpp  render_module.cpp  res_module.cpp  scene_module.cpp
LumEngine/engine/utils/: e_define.hpp  path_service.hpp  sparse_set.hpp
LumEngine/internal_assets/models/: ERRORText.mb
LumEngine/internal_assets/shaders/: basic.frag  basic.vert  geometry_pass.frag  geometry_pass.vert  irradiance.frag  light_pass.frag  light_pass.vert  postprocess_pass.frag  postprocess_pass.vert  prefiltered_env.frag  shadow_pass.frag  shadow_pass.vert  skybox_pass.frag  skybox_pass.vert
core/engine/: Engine.cpp  Engine.hpp
core/managers/renderers/: IRenderer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp
core/namespaces/: Math.hpp
engine/: Engine.cpp  Engine.hpp  IManager.hpp
engine/audiomodule/: audio_manager.hpp
engine/entitymodule/: entity.hpp
engine/entitymodule/ecs/: ecs_component_pool.hpp  ecs_define.hpp  ecs_manager.hpp
engine/entitysystem/ecs/: ecs_base.hpp  ecs_component_pool.hpp  ecs_manager.hpp
engine/eventmodule/: ev_bus.hpp  ev_bus.ipp  ev_define.hpp  ev_emitter.hpp  ev_engine.hpp  ev_pool.hpp
engine/eventsystem/: EngineEvents.hpp  EventManager.hpp  GameEvents.hpp  IEvent.hpp  ev_base.hpp  ev_define.hpp  ev_game.hpp  ev_listener.hpp  ev_manager.cpp  ev_manager.hpp  ev_manager.ipp  ev_pool.hpp
engine/objectsystem/: Object.cpp  Object.hpp  ObjectManager.cpp  ObjectManager.hpp
engine/utils/: Math.hpp  config.hpp  e_define.hpp
init/: init_cmake.bat  init_fmod.bat  init_glfw.bat
tools/: Config.json  LumenHeaderCompiler.deps.json  ParserConfig.json  TokenizerConfig.json  Types.json  config.json  init_assimp.py  init_cmake.py  init_fmod.py  init_glfw.py  init_glm.py  init_imgui.py  init_stb.py
(+425 files in other folders)
